--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Em desenvolvimento.</h1>
             <small>Desenvolvido por: Vlair Simas.</small>
         </div>
-        <a href="https://www.facebook.com/Vlair.O.Continental" target="_blank">
+        <a href="https://www.facebook.com/Vlair.O.Brasil" target="_blank">
             <span class="fa-stack fa-lg fb">
                 <i class="far fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook-f fa-stack-1x"></i>
